--- a/src/css/style.css
+++ b/src/css/style.css
@@ -493,6 +493,7 @@ body {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
+  min-height: 100vh;
   font-family: "Roboto", arial, sans-serif;
   font-weight: 400;
   color: #1a1a1a; }
@@ -2131,7 +2132,8 @@ body {
 .footer-page {
   background-image: url("../img/bg/footer-bg.png");
   background-attachment: fixed;
-  padding: 3em 0; }
+  padding: 3em 0;
+  margin-top: auto; }
   .footer-page > .container {
     display: -webkit-box;
     display: -webkit-flex;
