--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -5,6 +5,7 @@ html {
 body{
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
   font-family: $roboto;
   font-weight: 400;
   color: $black;
