--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1191,6 +1191,7 @@ $anim-bg: .3s;
   background-image: url('../img/bg/footer-bg.png');
   background-attachment: fixed;
   padding: 3em 0;
+  margin-top: auto;
   
   & > .container {
     display: flex;
